RESOLVED FIXED144701
CoreTextSPI.h uses wrong version number to denote Yosemite
https://bugs.webkit.org/show_bug.cgi?id=144701
Summary CoreTextSPI.h uses wrong version number to denote Yosemite
Jon Lee
Reported 2015-05-06 12:08:04 PDT
CoreTextSPI.h uses wrong version number to denote Yosemite
Attachments
Patch (1.87 KB, patch)
2015-05-06 12:16 PDT, Jon Lee
no flags
Radar WebKit Bug Importer
Comment 1 2015-05-06 12:08:27 PDT
Jon Lee
Comment 2 2015-05-06 12:16:46 PDT
WebKit Commit Bot
Comment 3 2015-05-06 16:44:07 PDT
Comment on attachment 252505 [details] Patch Clearing flags on attachment: 252505 Committed r183899: <http://trac.webkit.org/changeset/183899>
WebKit Commit Bot
Comment 4 2015-05-06 16:44:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.