CoreTextSPI.h uses wrong version number to denote Yosemite https://bugs.webkit.org/show_bug.cgi?id=144701

Reviewed by Dean Jackson.

* platform/spi/cocoa/CoreTextSPI.h: Should 101000 not 10100.


Canonical link: https://commits.webkit.org/162733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183899 268f45cc-cd09-0410-ab3c-d52691b4dbfc